--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Hello Analytics Reporting API V4</title>
-  <!-- <meta name="google-signin-client_id" content="<REPLACE_WITH_CLIENT_ID>">
-  <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly"> -->
+  <meta name="google-signin-client_id" content="<REPLACE_WITH_CLIENT_ID>">
+  <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
 </head>
 <body>
 
 <h1>Hello Analytics Reporting API V4</h1>
 
 <!-- The Sign-in button. This will run `queryReports()` on success. -->
-<!-- <p class="g-signin2" data-onsuccess="queryReports"></p> -->
+<p class="g-signin2" data-onsuccess="queryReports"></p>
 
 <!-- The API response will be printed here. -->
-<!-- <textarea cols="80" rows="20" id="query-output"></textarea> -->
+<textarea cols="80" rows="20" id="query-output"></textarea>
 
-<!-- <script>
+<script>
   // Replace with your view ID.
   var VIEW_ID = '<REPLACE_WITH_VIEW_ID>';
 
@@ -51,7 +51,7 @@
     var formattedJson = JSON.stringify(response.result, null, 2);
     document.getElementById('query-output').value = formattedJson;
   }
-</script> -->
+</script>
 
 <!-- Load the JavaScript API client and Sign-in library. -->
 <script src="https://apis.google.com/js/client:platform.js"></script>
