playing with query

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             metrics: [
               {
                 expression: 'ga:sessions'
+              },
+            ],
+            dimensions: [
+              {
+                expression: 'ga:dimension1',
+                expression: 'ga:dimension2',
               }
             ]
           }
