playing with query

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             ],
             dimensions: [
               {
-                expression: 'ga:dimension1',
-                expression: 'ga:dimension2',
+                name: 'ga:dimension1',
+                name: 'ga:dimension2',
               }
             ]
           }
