playing with query

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
               {
                 expression: 'ga:sessions'
               },
+              {
+                expression: 'ga:sessionDuration'
+              },
+              {
+                expression: 'ga:metric1'
+              },
             ],
             dimensions: [
               {
