--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     const firstRow = document.createElement('tr');
     const headers = ["Date", "Time (PST)", "Duration", "User ID"];
     for (let i = 0; i < 3; i += 1) {
-      let temp = document.createElement('th').innerText = headers[i]
+      let temp = document.createElement('th');
+      temp.innerText = headers[i];
       firstRow.appendChild(temp);
     }
     tableBody.appendChild(firstRow);
