--- a/index.html
+++ b/index.html
@@ -86,22 +86,54 @@
   }
 
   function displayUsageLog(response) {
-    const entries = response.result.reports[0].data.rows.length;
+    const entries = response.result.reports[0].data.rows;
 
+    // create a table
     const table = document.createElement('table');
     table.style.width = '50%';
     table.setAttribute('border', '1');
     const tableBody = document.createElement('tbody');
     table.appendChild(tableBody);
+
+    // set the col headers
     const firstRow = document.createElement('tr');
     const headers = ["Date", "Time (PST)", "Duration", "User ID"];
-    for (let i = 0; i < 3; i += 1) {
+    for (let i = 0; i < headers.length; i += 1) {
       let temp = document.createElement('th');
       temp.innerText = headers[i];
       firstRow.appendChild(temp);
     }
     tableBody.appendChild(firstRow);
 
+    // fill the table with the correct data
+    // for every entry
+    for (let i = 0; i <= entries.length; i += 1) {
+      // start a new row
+      for (let i = 0; i < headers.length) {
+        let newRow = document.createElement('tr');
+        let data = document.createElement('td');
+        let cellData = null;
+        if (i === 0) {
+          // date
+          cellData = `${entries[i].dimensions[2].slice(4,6)}/${entries[i].dimensions[2].slice(6,8)}/${entries[i].dimensions[2].slice(2,4)}}`
+        }
+        else if (i === 1) {
+          // time
+          cellData = `${parseInt(entries[i].dimensions[2].slice(8,10)) - 1}:${parseInt(entries[i].dimensions[2].slice(10))}:00`
+        }
+        else if (i === 2) {
+          // duration
+          cellData = convertSecondsToTimestamp(parseInt(entries[i].metrics[0].values[0])
+        }
+        else if (i === 3) {
+          // user
+          cellData = entries[i].dimensions[0]
+        }
+        data.innerText = cellData
+        newRow.appendChild(data)
+        tableBody.appendChild(newRow);
+      }
+    }
     console.log("USAGE LOG: ", response);
     var formattedJson = JSON.stringify(response.result, null, 2);
     document.getElementById('usage-log-output').appendChild(table);
@@ -155,6 +187,9 @@
     console.log(response);
     var formattedJson = JSON.stringify(response.result, null, 2);
     document.getElementById('query-output').value = formattedJson;
+  }
+  function convertSecondsToTimestamp (seconds) {
+    return new Date(seconds * 1000).toISOString().substr(11, 8)
   }
 </script>
 
