--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     // for every entry
     for (let i = 0; i <= entries.length; i += 1) {
       // start a new row
-      for (let i = 0; i < headers.length) {
+      for (let i = 0; i < headers.length; i += 1) {
         let newRow = document.createElement('tr');
         let data = document.createElement('td');
         let cellData = null;
