playing with query

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
         else if (i === 2) {
           // duration
-          cellData = convertSecondsToTimestamp(parseInt(entries[i].metrics[0].values[0])
+          cellData = convertSecondsToTimestamp(parseInt(entries[i].metrics[0].values[0]));
         }
         else if (i === 3) {
           // user
