--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
     // for every entry
     for (let i = 0; i <= entries.length; i += 1) {
       // start a new row
-      let newRow;
+      let newRow = document.createElement('tr');
       for (let j = 0; j < headers.length; j += 1) {
-        newRow = document.createElement('tr');
         let data = document.createElement('td');
         let cellData = null;
         if (j === 0) {
