playing with query

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         let cellData = null;
         if (j === 0) {
           // date
+          console.log(entries);
           cellData = `${entries[i].dimensions[2].slice(4,6)}/${entries[i].dimensions[2].slice(6,8)}/${entries[i].dimensions[2].slice(2,4)}}`
         }
         else if (j === 1) {
