--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     // fill the table with the correct data
     // for every entry
-    for (let i = 0; i <= entries.length; i += 1) {
+    for (let i = 0; i < entries.length; i += 1) {
       // start a new row
       let newRow = document.createElement('tr');
       for (let j = 0; j < headers.length; j += 1) {
