--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
 <textarea cols="80" rows="20" id="query-output"></textarea>
 <h3>Date Range</h3>
 <textarea cols="40" rows="2" id="date-output"></textarea>
-<h3>Total Log In Time</h3>
-<textarea cols="40" rows="2" id="total-time-output"></textarea>
-<h3>Total # of Sessions</h3>
-<textarea cols="40" rows="2" id="total-sessions-output"></textarea>
-<h3>Avg. Session Length</h3>
-<textarea cols="40" rows="2" id="avg-sessions-output"></textarea>
+<h3 id="overview">Overview</h3>
 <h3 id="userid-output">Usage by User ID</h3>
 <h3 id="usage-log-output">Usage Log</h3>
 
@@ -112,7 +107,7 @@
       }
       tableBody.appendChild(newRow);
     }
-    document.getElementById('userid-output').appendChild(table);
+    document.getElementById('overview').appendChild(table);
   }
   // get usage by user id
   function usageByUserId () {
