--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <p class="g-signin2" data-onsuccess="queryReports"></p>
 
 <!-- The API response will be printed here. -->
-<textarea cols="80" rows="20" id="query-output"></textarea>
-<h3>Date Range</h3>
-<textarea cols="40" rows="2" id="date-output"></textarea>
+<h3>Date Range: Current default is past 7 days of activity</h3>
+<textarea cols="40" rows="2" id="date-output">Current default is past 7 days</textarea>
 <h3 id="overview">Overview</h3>
 <h3 id="userid-output">Usage by User ID</h3>
 <h3 id="usage-log-output">Usage Log</h3>
@@ -63,7 +62,6 @@
     }).then(displayOverview, console.error.bind(console));
   }
   function displayOverview (response) {
-    console.log(response)
     const entries = response.result.reports[0].data.rows;
 
     // create a table
