--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p class="g-signin2" data-onsuccess="queryReports"></p>
 
 <!-- The API response will be printed here. -->
-<h3>Date Range: Current default is past 7 days of activity</h3>
+<h3>Date Range: </h3>
 <textarea cols="40" rows="2" id="date-output">Current default is past 7 days</textarea>
 <h3 id="overview">Overview</h3>
 <h3 id="userid-output">Usage by User ID</h3>
