--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 <!-- The API response will be printed here. -->
 <h3>Date Range: </h3>
+<form>
+  Start Date: <input type="date" name="start" id="startDate" value="value">
+  End Date: <input type="date" name="end" id="endDate" value="value">
+  <input type="submit">
+</form>
+
 <textarea cols="40" rows="2" id="date-output">Current default is past 7 days</textarea>
 <h3 id="overview">Overview</h3>
 <h3 id="userid-output">Usage by User ID</h3>
