--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     const end = document.getElementById('endDate').value
     alert(start)
     alert(end)
-    return false
+    return false;
   }
 
   function queryReports() {
