--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
     endInput.setAttribute('id', 'end-date');
     endInput.setAttribute('value', 'value');
     const submit = document.createElement('input');
+    submit.setAttribute('type', 'submit');
     submit.setAttribute('value', "Query Usage Data");
-    form.innerText = "Start Date: "
     form.appendChild(startInput);
-    form.innerText += "End Date: " 
     form.appendChild(endInput);
     form.appendChild(submit);
     dateArea.appendChild(form);
