--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     submit.setAttribute('value', "Query Usage Data");
     form.appendChild(submit);
     // add it to the dom
-    dateArea.parentNode.insertBefore(form, element.nextSibling);
+    body.insertBefore(form, dateArea);
   }
 
   function updateDate() {
