--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     const submit = document.createElement('input');
     submit.setAttribute('type', 'submit');
     submit.setAttribute('value', "Query Usage Data");
+    submit.style('display', 'block');
     form.appendChild(submit);
     // add it to the dom
     // find the date area and insert the form after
